# Orbitron

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  concurrency  example.ot  go.mod  go.sum  hello  var_syntax_test
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/commands/: add-keyword.md  add-stdlib.md  build.md  fmt.md  new-example.md  review.md  run.md  test.md
cmd/bot-danya/: main.go
cmd/consumer/: main.go
cmd/producer/: main.go
deploy/: mongodb-compose.yml
deployments/: cassandra-compose.yml
docs/: SUMMARY.md  architecture.md  ch01_introduction.md  ch02_getting_started.md  ch03_basics.md  ch04_control_flow.md  ch05_functions.md  ch06_collections.md  ch07_oop.md  ch08_features.md  ch09_stdlib.md  ch10_projects.md  ch11_lowlevel.md  ch12_backends.md  examples.md  getting-started.md  lowlevel.md  reference.md  stdlib.md  syntax.md
examples/: algo_demo.ot  bits_demo.ot  concurrency.ot  db_demo.ot  features.ot  fibonacci.ot  hello.ot  input_demo.ot  net_demo.ot  new_syntax.ot  oop_class.ot  oop_struct.ot  optionals.ot  stats.ot  stdlib_demo.ot  syscall_demo.ot  var_syntax_test.ot
examples/01_basics/: hello.ot  input.ot  operators.ot  variables.ot
examples/02_control_flow/: conditionals.ot  loops.ot  match.ot
examples/03_functions/: basics.ot  pipe.ot  (+1 more)
src/: ast.rs  cli.rs  codegen.rs  error.rs  lexer.rs  main.rs  parser.rs  pipeline.rs  project.rs  resolver.rs
stdlib/: algo.ot  bits.ot  db.ot  math.ot  net.ot  sys.ot
vscode-orbitron/: .vscodeignore  language-configuration.json  package.json
(+43 files in other folders)
